--- a/src/main/java/Vistas/VistaMenuPrincipal.form
+++ b/src/main/java/Vistas/VistaMenuPrincipal.form
@@ -113,6 +113,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Votar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
