--- a/src/main/java/Vistas/VistaMenuPrincipal.form
+++ b/src/main/java/Vistas/VistaMenuPrincipal.form
@@ -35,9 +35,9 @@
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jButton2" min="-2" pref="239" max="-2" attributes="0"/>
+                  <Component id="botonCrearEleccion" min="-2" pref="239" max="-2" attributes="0"/>
                   <Component id="botonCrearCandidato" min="-2" pref="239" max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" pref="239" max="-2" attributes="0"/>
+                  <Component id="botonCrearVotante" min="-2" pref="239" max="-2" attributes="0"/>
                   <Component id="jButton4" alignment="0" min="-2" pref="239" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -59,7 +59,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="45" max="-2" attributes="0"/>
+                      <Component id="botonCrearVotante" min="-2" pref="45" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -67,7 +67,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jButton4" min="-2" pref="45" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jButton2" min="-2" pref="46" max="-2" attributes="0"/>
+              <Component id="botonCrearEleccion" min="-2" pref="46" max="-2" attributes="0"/>
               <EmptySpace pref="107" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -83,15 +83,18 @@
         <Property name="text" type="java.lang.String" value="Sistema de elecciones"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="botonCrearVotante">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial Black" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Gestionar votante"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCrearVotanteActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="botonCrearEleccion">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial Black" size="14" style="1"/>
@@ -99,7 +102,7 @@
         <Property name="text" type="java.lang.String" value="Gestionar elecci&#xf3;n"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCrearEleccionActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botonCrearCandidato">
